V4.0.1 (in progress)
[BUG] : Corrected bugs : 286, 265, 268, 283, 284, 302, 282, 280, 296, 304 (see http://www.automne.ws/bug/)
[REFACTOR] : update Automne copyright dates
[REFACTOR] : add a background image on lorem ipsum text to help non latin natives to identify it
[REFACTOR] : do some optimisation on administration images
[FEATURE] : update Zend Framework to version 1.10.2
[FEATURE] : Add alternative domains management for websites

V4.0.0 (18/01/10)
[BUG] : Lots of minor bugs corrected
[BUG] : tags atm-loop can now be nested
[BUG] : add missing ExtJS locales
[BUG] : correct problems on sessions persistence
[BUG] : handle iframe crash (wrong domain)
[BUG] : block varchar with single quotes can be edited
[BUG] : infinite loop when editing some pages
[REFACTOR] : Completely refactor I18nm messages system. The message table is now more extensible
[REFACTOR] : Update polymod documentation
[REFACTOR] : Review english messages
[REFACTOR] : Improve security against file upload threat
[REFACTOR] : Update FCKEditor to version 2.6.5 to correct some IE8 bugs
[FEATURE] : modules can now add tabs to page properties through method getPageTabsProperties
[FEATURE] : add {user:id:type} vars type for polymod rows
[FEATURE] : add cache control on images files (see .htaccess)
[FEATURE] : polymod : add filter on primary resources objects status

V4.0.0rc3 (25/11/09)
[REMOVED] : XHTML validator is no longer available due to too many problems
[BUG] : Lots of minor bugs corrected
[BUG] : In page edition, rows with no height can be handled
[BUG] : In page edition, small width rows no longer have issues with row controls
[REFACTOR] : Improve security against XSS, CSRF and session fixation on administration, cms_forms and polymod modules.
[REFACTOR] : XHTML Entities are now correctly handled in polymod blocks
[REFACTOR] : All demo code is now in UTF8.